--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -6,13 +6,19 @@
 
 <p role="status">Current count: @currentCount</p>
 
+<RaygunErrorBoundary>
+    <SelfDestruct/>
+</RaygunErrorBoundary>
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
+
     private int currentCount = 0;
 
     private void IncrementCount()
     {
         currentCount++;
+        throw new NullReferenceException("Global unhandled exception");
     }
 }
